@@ -3,3 +3,4 @@ main/usr/lib/pkgconfig/xorg-server.pc	usr/lib/pkgconfig
 main/usr/share/aclocal	usr/share
 
 ../../debian/local/dh_xsf_substvars usr/bin
+../../debian/local/xsf.pm /usr/share/perl5/Debian/Debhelper/Sequence/
